fix add review image button on iphone

--- a/src/sass/pages/_reviewdetails.scss
+++ b/src/sass/pages/_reviewdetails.scss
@@ -113,15 +113,22 @@
     &-label {
       display: inline-block;
       cursor: pointer;
-      display: inline-block;
-      transition: 0.3s ease-in opacity;
+      height: 100%;
+      font-size: 2rem;
+      background-color: var(--color-grey-mid);
+      color: var(--color-white);
+      border-radius: 0.7rem;
+
+      &:hover {
+        opacity: 0.7;
+      }
 
       &btn {
         width: 100%;
         height: 100%;
         font-size: 1.6rem;
         position: relative;
-        z-index: -1;
+        z-index: 4;
         background-color: var(--color-grey-mid);
         padding: 1rem 1.5rem;
         border-radius: 0.7rem;
@@ -140,14 +147,11 @@
     }
 
     &-input {
+      position: relative;
       z-index: -1;
       opacity: 0;
-      width: 2rem;
-
-      @include respond(phone) {
-        background-color: red;
-        width: 0;
-      }
+      width: 1rem;
+      margin-right: 1rem;
     }
 
     &-submit {
